# storage/api-docs/api-docs.json
@@ -1839,6 +1839,192 @@
                 }
             }
         },
+        "/api/post-comentary": {
+            "get": {
+                "tags": [
+                    "PostComentarys"
+                ],
+                "summary": "Get list of PostComentary",
+                "description": "Returns list of PostComentary",
+                "operationId": "indexPostComentary",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PostComentary"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "PostComentarys"
+                ],
+                "summary": "Insert a new PostComentary",
+                "description": "Insert a new PostComentary",
+                "operationId": "storePostComentary",
+                "requestBody": {
+                    "description": "PostComentary to create",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "data": {
+                                        "$ref": "#/components/schemas/PostComentary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "PostComentary created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/PostComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation exception"
+                    }
+                }
+            }
+        },
+        "/api/post-comentary/{postcomentary_id}": {
+            "get": {
+                "tags": [
+                    "PostComentarys"
+                ],
+                "summary": "Show a PostComentary from his Id",
+                "description": "Show a PostComentary from his Id",
+                "operationId": "showPostComentary",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/PostComentary--id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/PostComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "PostComentary not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "PostComentarys"
+                ],
+                "summary": "Delete a PostComentary",
+                "description": "Delete a PostComentary",
+                "operationId": "destroyPostComentary",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/PostComentary--id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/PostComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No content"
+                    },
+                    "404": {
+                        "description": "PostComentary not found"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "PostComentarys"
+                ],
+                "summary": "Update an existing PostComentary",
+                "description": "Update an existing PostComentary",
+                "operationId": "updatePostComentary",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/PostComentary--id"
+                    }
+                ],
+                "requestBody": {
+                    "description": "PostComentary to update",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "data": {
+                                        "$ref": "#/components/schemas/PostComentary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/PostComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "PostComentary not found"
+                    }
+                }
+            }
+        },
         "/api/post": {
             "get": {
                 "tags": [
@@ -4465,6 +4651,138 @@
                 },
                 "type": "object"
             },
+            "PostComentary": {
+                "title": "PostComentary",
+                "description": "PostComentary model",
+                "required": [],
+                "properties": {
+                    "id": {
+                        "title": "id",
+                        "description": "id of PostComentary",
+                        "type": "integer",
+                        "readOnly": "true",
+                        "example": "1"
+                    },
+                    "name": {
+                        "title": "name",
+                        "description": "name of PostComentary",
+                        "type": "string",
+                        "example": "Macbook Pro"
+                    },
+                    "sku": {
+                        "title": "sku",
+                        "description": "sku of PostComentary",
+                        "type": "string",
+                        "example": "MCBPRO2022"
+                    },
+                    "price": {
+                        "title": "price",
+                        "description": "price of PostComentary",
+                        "type": "integer",
+                        "example": "99"
+                    },
+                    "created_at": {
+                        "title": "created_at",
+                        "type": "dateTime",
+                        "readOnly": "true",
+                        "example": "2022-07-04T02:41:42.336Z"
+                    },
+                    "updated_at": {
+                        "title": "updated_at",
+                        "type": "dateTime",
+                        "readOnly": "true",
+                        "example": "2022-07-04T02:41:42.336Z"
+                    }
+                },
+                "type": "object"
+            },
+            "PostComentarys": {
+                "title": "PostComentarys list",
+                "properties": {
+                    "data": {
+                        "title": "data",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/PostComentary"
+                        }
+                    },
+                    "first_page_url": {
+                        "title": "first_page_url",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers?page=1"
+                    },
+                    "last_page_url": {
+                        "title": "last_page_url",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers?page=3"
+                    },
+                    "prev_page_url": {
+                        "title": "prev_page_url",
+                        "type": "string",
+                        "example": "null"
+                    },
+                    "next_page_url": {
+                        "title": "next_page_url",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers?page=2"
+                    },
+                    "current_page": {
+                        "title": "current_page",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "from": {
+                        "title": "from",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "last_page": {
+                        "title": "last_page",
+                        "type": "integer",
+                        "example": "3"
+                    },
+                    "path": {
+                        "title": "path",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers"
+                    },
+                    "per_page": {
+                        "title": "per_page",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "total": {
+                        "title": "total",
+                        "type": "integer",
+                        "example": "3"
+                    },
+                    "links": {
+                        "title": "links",
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "url": {
+                                    "title": "url",
+                                    "type": "string",
+                                    "example": "http://localhost:8080/api/merchant-customers?page=2"
+                                },
+                                "label": {
+                                    "title": "label",
+                                    "type": "string",
+                                    "example": "1"
+                                },
+                                "active": {
+                                    "title": "active",
+                                    "type": "boolean",
+                                    "example": "true"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                },
+                "type": "object"
+            },
             "Profession": {
                 "title": "Profession",
                 "description": "Profession model",
@@ -5462,6 +5780,16 @@
                 "name": "Post_id",
                 "in": "path",
                 "description": "Id of Post",
+                "required": true,
+                "schema": {
+                    "type": "integer",
+                    "example": "1"
+                }
+            },
+            "PostComentary--id": {
+                "name": "PostComentary_id",
+                "in": "path",
+                "description": "Id of PostComentary",
                 "required": true,
                 "schema": {
                     "type": "integer",
